Bug tracker at http://code.google.com/p/psutil/issues

1.0.0 - XXXX-XX-XX
------------------

NEW FEATURES

 * #18:  Solaris support (yay!)  (thanks Justin Venus)
 * #367: Process.get_connections() 'status' strings are now constants.
 * #380: test suite exits with non-zero on failure.  (patch by floppymaster)
 * #224: Process.get_threads() now displays real thread IDs. (patch by Adrien Fallou)

BUG FIXES

 * #379: [Linux] Process.get_memory_maps() may raise ValueError.

API CHANGES

 * Process.get_connections() 'status' field is no longer a string but a constant
   object (psutil.CONN_*).


0.7.1 - 2013-05-03
------------------

BUG FIXES:

 * #325: [BSD] psutil.virtual_memory() can raise SystemError.
         (patch by Jan Beich)
 * #370: [BSD] Process.get_connections() requires root.  (patch by John Baldwin)
 * #372: [BSD] different process methods raise NoSuchProcess instead of
         AccessDenied.


0.7.0 - 2013-04-12
------------------

NEW FEATURES

 * #233: code migrated to Mercurial (yay!)
 * #246: psutil.error module is deprecated and scheduled for removal.
 * #328: [Windows] process IO nice/priority support.
 * #359: psutil.get_boot_time()
 * #361: [Linux] psutil.cpu_times() now includes new 'steal', 'guest' and
         'guest_nice' fields available on recent Linux kernels.
         Also, psutil.cpu_percent() is more accurate.
 * #362: cpu_times_percent() (per-CPU-time utilization as a percentage)

BUG FIXES

 * #234: [Windows] disk_io_counters() fails to list certain disks.
 * #264: [Windows] use of psutil.disk_partitions() may cause a message box to
         appear.
 * #313: [Linux] psutil.virtual_memory() and psutil.swap_memory() can crash on
         certain exotic Linux flavors having an incomplete /proc interface.
         If that's the case we now set the unretrievable stats to 0 and raise a
         RuntimeWarning.
 * #315: [OSX] fix some compilation warnings.
 * #317: [Windows] cannot set process CPU affinity above 31 cores.