@@ -6,9 +6,12 @@ Bug tracker at http://code.google.com/p/psutil/issues
 NEW FEATURES
 
  * #18:  Solaris support (yay!)  (thanks Justin Venus)
+ * #224: Process.get_threads() now displays real thread IDs.  (patch by Adrien
+   Fallou)
  * #367: Process.get_connections() 'status' strings are now constants.
  * #380: test suite exits with non-zero on failure.  (patch by floppymaster)
- * #224: Process.get_threads() now displays real thread IDs. (patch by Adrien Fallou)
+ * #391: extensively use unittest2 module in unit tests and provide
+         workarounds if this is not installed on python < 2.7.
 
 BUG FIXES
 
